syntax = "proto3";



package kasugai;


message ActiveUsersList {
  repeated User users = 1;
}

message ActiveUsersRequest {}

message User {
  string name = 1;
  MessageResponse message = 2;
}

message MessageResponse {
  string message = 1;
  string timestamp = 2;
}

service Broadcast {
    rpc ChatService(stream MessageResponse) returns (stream MessageResponse){}
    rpc ActiveUsers(ActiveUsersRequest) returns (ActiveUsersList) {}
  }

  



  
